# ansi

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py  test.py  test_ansi.py  tox.ini
.autogit/logs/: log-28-2-2020-0-31-7.txt
ansi/: __init__.py  color.py  colour.py  cursor.py  iterm.py  osc.py  sequence.py
ansi/colour/: __init__.py  base.py  bg.py  fg.py  fx.py  rgb.py
