[metadata]
name = ansi
version = 0.3.1
description = ANSI cursor movement and graphics
author = Wijnand Modderman-Lenstra
author_email = maze@pyth0n.org
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tehmaze/ansi/

[options]
python_requires = >=3.6
packages = ansi, ansi.colour
