[metadata]
name = ansi
version = 0.3.5
description = ANSI cursor movement and graphics
author = Wijnand Modderman-Lenstra
author_email = maze@pyth0n.org
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tehmaze/ansi/

[options]
python_requires = >=3.6
packages = ansi, ansi.colour
install_requires =
    typing_extensions>=3.6.4; python_version < "3.8"
include_package_data = True

[options.package_data]
* = py.typed
